# pal-service-manager

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
scripts/: backup_save.sh  install_server.sh  restore_save.sh  start_server.sh
src/: bot_cmd.rs  config.rs  constant.rs  cvm_utils.rs  error.rs  local_storage.rs  main.rs  psm.rs  server_status.rs  shell_manager.rs
