[package]
name = "pal-service-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tencentcloud-sdk = { version = "0.0.1", path = "../tencentcloud-sdk" }
cqhttp-bot-frame = { version = "0.0.1", path = "../cqhttp-bot-frame" }
serde_yaml = "0.9.30"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.12.0"