[package]
name = "pal-service-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
clap = { version = "4.4.18", features = ["derive"] }
config = "0.13.4"
cqhttp-bot-frame = { git = "https://github.com/EluvK/cqhttp-bot-frame.git", branch = "master" }
itertools = "0.12.0"
opendal = { version = "0.44.2", default-features = false, features = [
    "services-sftp",
    "services-fs",
    "layers-tracing",
] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.30"
ssh2 = "0.9.4"
tencentcloud-sdk = { git = "https://github.com/EluvK/tencentcloud-sdk.git", branch = "master" }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
